improved JSON error handling

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,15 +28,13 @@ add_executable(MusicMaker
 		src/MIDIFileLoading.cpp
 		src/lua/LuaBindings.cpp
 		src/game/GameBridge.cpp
+		src/game/GameStateHandler.cpp
 
 		libs/midifile/src/MidiFile.cpp
 		libs/midifile/src/MidiEvent.cpp
 		libs/midifile/src/MidiEventList.cpp
 		libs/midifile/src/MidiMessage.cpp
 		libs/midifile/src/Binasc.cpp
-		libs/rtmidi-6.0.0/RtMidi.cpp
-		src/lua/ValidLiterals.h
-		src/lua/LuaRuleValidation.h
 )
 
 # Add /resources, /input and /lua directories
