started working on a GUI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,10 @@ cmake_minimum_required(VERSION 4.0.1)
 
 project(MusicMaker)
 
+
 find_package(lua CONFIG REQUIRED)
+find_package(OpenGL REQUIRED)
+
 
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -17,7 +20,35 @@ set(RTMIDI_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libs/rtmidi-6.0.0)
 set(MIDIFILE_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libs/midifile/include)
 set(MIDIFILE_LIB_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libs/midifile/lib)
 
+set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
+set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
+set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
+
+
+add_subdirectory(libs/glfw-3.4 ${CMAKE_BINARY_DIR}/glfw-build)
+
 add_definitions(-D__WINDOWS_MM__)
+
+add_library(glad STATIC libs/glad/src/glad.c)
+target_include_directories(glad PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/libs/glad/include)
+
+
+add_library(imgui
+		libs/imgui/imgui.cpp
+		libs/imgui/imgui_draw.cpp
+		libs/imgui/imgui_tables.cpp
+		libs/imgui/imgui_widgets.cpp
+		libs/imgui/backends/imgui_impl_glfw.cpp
+		libs/imgui/backends/imgui_impl_opengl3.cpp
+)
+
+target_include_directories(imgui PUBLIC
+		${CMAKE_CURRENT_SOURCE_DIR}/libs/imgui
+		${CMAKE_CURRENT_SOURCE_DIR}/libs/imgui/backends
+)
+
+target_compile_definitions(imgui PUBLIC IMGUI_IMPL_OPENGL_LOADER_GLAD)
+target_link_libraries(imgui PUBLIC glfw glad OpenGL::GL)
 
 
 # Add the executable target
@@ -29,6 +60,7 @@ add_executable(MusicMaker
 		src/lua/LuaBindings.cpp
 		src/game/GameBridge.cpp
 		src/game/GameStateHandler.cpp
+		src/gui/GUI.cpp
 
 		test/PerformanceTesting.cpp
 
@@ -37,8 +69,8 @@ add_executable(MusicMaker
 		libs/midifile/src/MidiEventList.cpp
 		libs/midifile/src/MidiMessage.cpp
 		libs/midifile/src/Binasc.cpp
-		test/TestCSV.h
 )
+
 
 # Add /resources, /input and /lua directories
 add_custom_command(TARGET MusicMaker POST_BUILD
@@ -51,11 +83,7 @@ add_custom_command(TARGET MusicMaker POST_BUILD
 		${CMAKE_CURRENT_SOURCE_DIR}/input
 		${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/input
 )
-#[[add_custom_command(TARGET MusicMaker POST_BUILD
-		COMMAND ${CMAKE_COMMAND} -E copy_directory
-		${CMAKE_CURRENT_SOURCE_DIR}/lua
-		${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/lua
-)]]
+
 
 target_compile_definitions(MusicMaker PRIVATE
 		LUA_RULES_SCRIPT_PATH="${CMAKE_CURRENT_SOURCE_DIR}/lua/rules.lua"
@@ -64,11 +92,11 @@ target_compile_definitions(MusicMaker PRIVATE
 
 target_include_directories(MusicMaker PRIVATE
 		${CMAKE_CURRENT_SOURCE_DIR}/src
+		${CMAKE_CURRENT_SOURCE_DIR}/libs/json-develop/include
+		${CMAKE_CURRENT_SOURCE_DIR}/libs/sol2/include
 		${FLUIDSYNTH_INCLUDE_DIR}
 		${RTMIDI_INCLUDE_DIR}
 		${MIDIFILE_INCLUDE_DIR}
-		${CMAKE_CURRENT_SOURCE_DIR}/libs/json-develop/include
-		${CMAKE_CURRENT_SOURCE_DIR}/libs/sol2/include
 )
 
 target_link_directories(MusicMaker PRIVATE
@@ -81,6 +109,9 @@ target_link_libraries(MusicMaker PRIVATE
 		fluidsynth-3
 		winmm
 		lua
+		glad
+		imgui
+		OpenGL::GL
 )
 
 if(WIN32)
